--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
   "bugs": {
     "url": "https://github.com/DiegoMax/ucrmjs/issues"
   },
-  "homepage": "https://github.com/DiegoMax/ucrmjs#readme"
+  "homepage": "https://github.com/DiegoMax/ucrmjs#readme",
+  "dependencies": {
+    "lodash": "^4.17.15",
+    "request-promise-native": "^1.0.8"
+  }
 }
