--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/DiegoMax/ucrmjs#readme",
   "dependencies": {
     "lodash": "^4.17.15",
+    "request": "^2.88.0",
     "request-promise-native": "^1.0.8"
   }
 }
