--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@diegomax/ucrmjs",
-  "version": "0.0.8",
+  "version": "0.1.0",
   "description": "Wrapper library around Ubiquiti's UCRM Rest API",
   "main": "index.js",
   "scripts": {
@@ -13,6 +13,7 @@
   "keywords": [
     "ucrm",
     "ubiquiti",
+    "unms",
     "rest",
     "api"
   ],
