Removed request deps and migrated HTTP code to axios

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@diegomax/ucrmjs",
-  "version": "0.1.7",
+  "version": "0.2.0",
   "description": "Wrapper library around Ubiquiti's UCRM Rest API",
   "main": "index.js",
   "scripts": {
@@ -24,8 +24,8 @@
   },
   "homepage": "https://github.com/DiegoMax/ucrmjs#readme",
   "dependencies": {
+    "axios": "^0.19.2",
     "lodash": "^4.17.15",
-    "request": "^2.88.0",
-    "request-promise-native": "^1.0.8"
+    "request": "^2.88.0"
   }
 }
