--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@diegomax/ucrmjs",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "Wrapper library around Ubiquiti's UCRM Rest API",
   "main": "index.js",
   "scripts": {
@@ -25,7 +25,6 @@
   "homepage": "https://github.com/DiegoMax/ucrmjs#readme",
   "dependencies": {
     "axios": "^0.19.2",
-    "lodash": "^4.17.15",
-    "request": "^2.88.0"
+    "lodash": "^4.17.15"
   }
 }
